Réorganisation des fichiers Sass

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Shrikhand&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/942fdedd2c.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="SaSS/style.css">
+    <link rel="stylesheet" href="SaSS/main.css">
     <title>OhMyFood</title>
 </head>
 <body>
