Finalisation de la page d’accueil, création des pages de navigation et mise en place du DOM

--- a/Restaurants/palette.html
+++ b/Restaurants/palette.html
@@ -6,9 +6,160 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Shrikhand&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/942fdedd2c.js" crossosrigin="anonymous"></script>
+    <link rel="stylesheet" href="../SaSS/main.css">
     <title>La Palette du Goût</title>
 </head>
 <body>
+    <div class="body__div">
+        <nav>
+            <div class="nav__restaurant">
+                <div class="nav__arrow"><a href="../index.html"><i class="fa-solid fa-arrow-left"></i></a></div>
+                <div class="nav__logo"><img src="../assets/Images/logo/ohmyfood@2x.svg" alt="logo ohmyfood"></div>
+                <div class="nav__espace"></div>
+            </div>
+            <div class="nav__loc">
+                <i class="fa-solid fa-location-dot"></i>
+                <p class="nav__texte">
+                    Paris, Belleville
+                </p>
+            </div>
+        </nav>
+        <main>
+            <!-- entrées -->
+            <section>
+                <div class="carte__title">
+                    <div><h2>La Palette du Goût</h2></div>
+                    <div><i class="fa-regular fa-heart"></i></div>
+                </div>
+                <article class="carte">
+                    <p class="position">ENTREES</p>
+                    <div>
+                        <div class="card">
+                            <h3>Fricassée d'escargots</h3>
+                            <div class="card__contenu">
+                                <p>Au piments d'Espelette</p>
+                                <p>25$</p>
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <h3>Fricassée d'escargots</h3>
+                            <div class="card__contenu">
+                                <p>Au piments d'Espelette</p>
+                                <p>25$</p>
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <h3>Fricassée d'escargots</h3>
+                            <div class="card__contenu">
+                                <p>Au piments d'Espelette</p>
+                                <p>25$</p>
+                            </div>
+                        </div>
+
+                    </div>
+                </article>
+                <!-- plats -->
+                <article class="carte">
+                    <p class="position">PLATS</p>
+                    <div>
+                        <div class="card">
+                            <h3>Fricassée d'escargots</h3>
+                            <div class="card__contenu">
+                                <p>Au piments d'Espelette</p>
+                                <p>25$</p>
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <h3>Fricassée d'escargots</h3>
+                            <div class="card__contenu">
+                                <p>Au piments d'Espelette</p>
+                                <p>25$</p>
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <h3>Fricassée d'escargots</h3>
+                            <div class="card__contenu">
+                                <p>Au piments d'Espelette</p>
+                                <p>25$</p>
+                            </div>
+                        </div>
+
+                    </div>
+                </article>
+                <!-- desserts -->
+                <article class="carte">
+                    <p class="position">DESSERTS</p>
+                    <div>
+                        <div class="card">
+                            <h3>Fricassée d'escargots</h3>
+                            <div class="card__contenu">
+                                <p>Au piments d'Espelette</p>
+                                <p>25$</p>
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <h3>Fricassée d'escargots</h3>
+                            <div class="card__contenu">
+                                <p>Au piments d'Espelette</p>
+                                <p>25$</p>
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <h3>Fricassée d'escargots</h3>
+                            <div class="card__contenu">
+                                <p>Au piments d'Espelette</p>
+                                <p>25$</p>
+                            </div>
+                        </div>
+
+                    </div>
+                </article>
+                <div class="button__position">
+                <a href="#" class="buttons">Commander</a>
+                </div>
+            </section>
+            
+        </main>
+        <footer>
+            <div class="footer__main">
+                <h3>ohmyfood</h3>
+                <ul>
+                    <li>
+                        <a href="#">
+                            <i class="fa-solid fa-utensils"></i>
+                            Proposer un restaurant
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="#">
+                            <i class="fa-solid fa-handshake"></i>
+                            Devenir partenaire
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="#">
+                            Mentions légales
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="#">
+                            Contact
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </footer>
+    </div>
     
 </body>
 </html>
