--- a/index.html
+++ b/index.html
@@ -11,141 +11,143 @@
     <title>OhMyFood</title>
 </head>
 <body>
-    <nav>
-        <div class="nav__image">
-            <img src="assets/Images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
-        </div>
-        <div class="nav__loc">
-            <i class="fa-solid fa-location-dot"></i>
-            <p class="nav__texte">
-                Paris, Belleville
-            </p>
-        </div>
-    </nav>
-    <header>
-        <div class="header__content">
-            <h1 class="header__title">Réservez le menu qui vous convient</h1>
-            <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
-            <a href="#" class="header__button">Explorer nos restaurants</a>
-        </div>
-    </header>
-    <main>
-        <section class="fonctionnement">
-            <h2>Fonctionnement</h2>
-            <div>
-                <p class="fonctionnement__list"><i class="fa-solid fa-mobile-screen-button"></i>Choisissez un restaurant</p>
-                <p class="fonctionnement__list"><i class="fa-solid fa-list"></i>Composez votre menu</p>
-                <p class="fonctionnement__list"><i class="fa-solid fa-store"></i>Dégustez au restaurant</p>
+    <div class="body__div">
+        <nav>
+            <div class="nav__image">
+                <img src="assets/Images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
             </div>
-        </section>
-        <div class="restaurant">
-            <section class="restaurant__main">
+            <div class="nav__loc">
+                <i class="fa-solid fa-location-dot"></i>
+                <p class="nav__texte">
+                    Paris, Belleville
+                </p>
+            </div>
+        </nav>
+        <header>
+            <div class="header__content">
+                <h1 class="header__title">Réservez le menu qui vous convient</h1>
+                <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
+                <a href="#" class="header__button">Explorer nos restaurants</a>
+            </div>
+        </header>
+        <main>
+            <section class="fonctionnement">
+                <h2>Fonctionnement</h2>
                 <div>
-                    <h2>Restaurants</h2>
-                </div>
-                <div class="restaurant__list">
-                    <div class="restaurant__cards">
-                        <a href="#">
-                            <article>
-                                <img src="assets/Images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
-                                <div>
-                                    <div>
-                                        <h3>La palette du goût</h3>
-                                        <p>Ménilmontant</p>
-                                    </div>
-                                    <div>
-                                        <i class="fa-regular fa-heart"></i>
-                                    </div>
-                                </div>
-                            </article>
-                        </a>
-                    </div>
-
-                    <div class="restaurant__cards">
-                        <a href="#">
-                            <article>
-                                <img src="assets/Images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
-                                <div>
-                                    <div>
-                                        <h3>La note enchantée</h3>
-                                        <p>Charonne</p>
-                                    </div>
-                                    <div>
-                                        <i class="fa-regular fa-heart"></i>
-                                    </div>
-                                </div>
-                            </article>
-                        </a>
-                    </div>
-
-                    <div class="restaurant__cards">
-                        <a href="#">
-                            <article>
-                                <img src="assets/Images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française">
-                                <div>
-                                    <div>
-                                        <h3>A la française</h3>
-                                        <p>Cité Rouge</p>
-                                    </div>
-                                    <div>
-                                        <i class="fa-regular fa-heart"></i>
-                                    </div>
-                                </div>
-                            </article>
-                        </a>
-                    </div>
-                    
-                    <div class="restaurant__cards">
-                        <a href="#">
-                            <article>
-                                <img src="assets/Images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
-                                <div>
-                                    <div>
-                                        <h3>Le délice des sens</h3>
-                                        <p>Folie-Méricourt</p>
-                                    </div>
-                                    <div>
-                                        <i class="fa-regular fa-heart"></i>
-                                    </div>
-                                </div>
-                            </article>
-                        </a>
-                    </div>
+                    <p class="fonctionnement__list"><i class="fa-solid fa-mobile-screen-button"></i>Choisissez un restaurant</p>
+                    <p class="fonctionnement__list"><i class="fa-solid fa-list"></i>Composez votre menu</p>
+                    <p class="fonctionnement__list"><i class="fa-solid fa-store"></i>Dégustez au restaurant</p>
                 </div>
             </section>
-        </div>
-    </main>
-    <footer>
-        <img src="assets/Images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
-        <div>
-            <ul>
-                <li>
-                    <a href="#">
-                        <i class="fa-solid fa-utensils"></i>
-                        Proposer un restaurant
-                    </a>
-                </li>
+            <div class="restaurant">
+                <section class="restaurant__main">
+                    <div>
+                        <h2>Restaurants</h2>
+                    </div>
+                    <div class="restaurant__list">
+                        <div class="restaurant__cards">
+                            <a href="Restaurants/palette.html">
+                                <article>
+                                    <img src="assets/Images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
+                                    <div class="restaurant__nom">
+                                        <div class="restaurant__content">
+                                            <h3>La palette du goût</h3>
+                                            <p>Ménilmontant</p>
+                                        </div>
+                                        <div class="restaurant__like">
+                                            <i class="fa-regular fa-heart"></i>
+                                        </div>
+                                    </div>
+                                </article>
+                            </a>
+                        </div>
 
-                <li>
-                    <a href="#">
-                        <i class="fa-solid fa-handshake"></i>
-                        Devenir partenaire
-                    </a>
-                </li>
+                        <div class="restaurant__cards">
+                            <a href="Restaurants/note.html">
+                                <article>
+                                    <img src="assets/Images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
+                                    <div class="restaurant__nom">
+                                        <div class="restaurant__content">
+                                            <h3>La note enchantée</h3>
+                                            <p>Charonne</p>
+                                        </div>
+                                        <div class="restaurant__like">
+                                            <i class="fa-regular fa-heart"></i>
+                                        </div>
+                                    </div>
+                                </article>
+                            </a>
+                        </div>
 
-                <li>
-                    <a href="#">
-                        Mentions légales
-                    </a>
-                </li>
+                        <div class="restaurant__cards">
+                            <a href="Restaurants/francaise.html">
+                                <article>
+                                    <img src="assets/Images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française">
+                                    <div class="restaurant__nom">
+                                        <div class="restaurant__content">
+                                            <h3>A la française</h3>
+                                            <p>Cité Rouge</p>
+                                        </div>
+                                        <div class="restaurant__like">
+                                            <i class="fa-regular fa-heart"></i>
+                                        </div>
+                                    </div>
+                                </article>
+                            </a>
+                        </div>
+                        
+                        <div class="restaurant__cards">
+                            <a href="Restaurants/delice.html">
+                                <article>
+                                    <img src="assets/Images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
+                                    <div class="restaurant__nom">
+                                        <div class="restaurant__content">
+                                            <h3>Le délice des sens</h3>
+                                            <p>Folie-Méricourt</p>
+                                        </div>
+                                        <div class="restaurant__like">
+                                            <i class="fa-regular fa-heart"></i>
+                                        </div>
+                                    </div>
+                                </article>
+                            </a>
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </main>
+        <footer>
+            <div class="footer__main">
+                <h3>ohmyfood</h3>
+                <ul>
+                    <li>
+                        <a href="#">
+                            <i class="fa-solid fa-utensils"></i>
+                            Proposer un restaurant
+                        </a>
+                    </li>
 
-                <li>
-                    <a href="#">
-                        Contact
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </footer>
+                    <li>
+                        <a href="#">
+                            <i class="fa-solid fa-handshake"></i>
+                            Devenir partenaire
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="#">
+                            Mentions légales
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="#">
+                            Contact
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
