--- a/Restaurants/francaise.html
+++ b/Restaurants/francaise.html
@@ -18,14 +18,11 @@
                 <div class="nav__logo"><img src="../assets/Images/logo/ohmyfood@2x.svg" alt="logo ohmyfood"></div>
                 <div class="nav__espace"></div>
             </div>
-            <div class="nav__loc">
-                <i class="fa-solid fa-location-dot"></i>
-                <p class="nav__texte">
-                    Paris, Belleville
-                </p>
-            </div>
         </nav>
-        <main>
+        <div class="restaurant__pics">
+            <img src="../assets/Images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt=" image plats de La palette du goût">
+        </div>
+        <main class="section__pics">
             <!-- entrées -->
             <section>
                 <div class="carte__title">
@@ -36,26 +33,26 @@
                     <p class="position">ENTREES</p>
                     <div>
                         <div class="card">
-                            <h3>Fricassée d'escargots</h3>
+                            <h3>Tartare de poulpe acidulé</h3>
                             <div class="card__contenu">
-                                <p>Au piments d'Espelette</p>
-                                <p>25$</p>
+                                <p>Aux zestes d'orange</p>
+                                <p class="card__prix">25€</p>
                             </div>
                         </div>
 
                         <div class="card">
-                            <h3>Fricassée d'escargots</h3>
+                            <h3>Velouté de légumes d'antan</h3>
                             <div class="card__contenu">
-                                <p>Au piments d'Espelette</p>
-                                <p>25$</p>
+                                <p>Carotte, panais, topinambour</p>
+                                <p class="card__prix">35€</p>
                             </div>
                         </div>
 
                         <div class="card">
-                            <h3>Fricassée d'escargots</h3>
+                            <h3>Soupe à l'oignon</h3>
                             <div class="card__contenu">
-                                <p>Au piments d'Espelette</p>
-                                <p>25$</p>
+                                <p>Revisitée</p>
+                                <p class="card__prix">20€</p>
                             </div>
                         </div>
 
@@ -66,26 +63,26 @@
                     <p class="position">PLATS</p>
                     <div>
                         <div class="card">
-                            <h3>Fricassée d'escargots</h3>
+                            <h3>Coquilles Saint-Jacques</h3>
                             <div class="card__contenu">
-                                <p>Au piments d'Espelette</p>
-                                <p>25$</p>
+                                <p>Accompagnées d'une purée de panais</p>
+                                <p class="card__prix">40€</p>
                             </div>
                         </div>
 
                         <div class="card">
-                            <h3>Fricassée d'escargots</h3>
+                            <h3>Magret de canard</h3>
                             <div class="card__contenu">
-                                <p>Au piments d'Espelette</p>
-                                <p>25$</p>
+                                <p>Et parmentier de pommes de terre</p>
+                                <p class="card__prix">35€</p>
                             </div>
                         </div>
 
                         <div class="card">
-                            <h3>Fricassée d'escargots</h3>
+                            <h3>Pigeonneau d’Ille-et-Vilaine</h3>
                             <div class="card__contenu">
-                                <p>Au piments d'Espelette</p>
-                                <p>25$</p>
+                                <p>Sur son lit de gnocchis aux légumes</p>
+                                <p class="card__prix">44€</p>
                             </div>
                         </div>
 
@@ -96,37 +93,37 @@
                     <p class="position">DESSERTS</p>
                     <div>
                         <div class="card">
-                            <h3>Fricassée d'escargots</h3>
+                            <h3>Pétales de violettes glacés</h3>
                             <div class="card__contenu">
-                                <p>Au piments d'Espelette</p>
-                                <p>25$</p>
+                                <p>Et purée de noisettes</p>
+                                <p class="card__prix">18€</p>
                             </div>
                         </div>
 
                         <div class="card">
-                            <h3>Fricassée d'escargots</h3>
+                            <h3>Fondant au chocolat</h3>
                             <div class="card__contenu">
-                                <p>Au piments d'Espelette</p>
-                                <p>25$</p>
+                                <p>Revisité</p>
+                                <p class="card__prix">22€</p>
                             </div>
                         </div>
 
                         <div class="card">
-                            <h3>Fricassée d'escargots</h3>
+                            <h3>Millefeuille croustillant</h3>
                             <div class="card__contenu">
-                                <p>Au piments d'Espelette</p>
-                                <p>25$</p>
+                                <p>Myrtilles et pâte d’amande</p>
+                                <p class="card__prix">23€</p>
                             </div>
                         </div>
 
                     </div>
                 </article>
-                <div class="button__position">
-                <a href="#" class="buttons">Commander</a>
-                </div>
             </section>
             
         </main>
+        <div class="button__position">
+            <a href="#" class="buttons">Commander</a>
+        </div>
         <footer>
             <div class="footer__main">
                 <h3>ohmyfood</h3>
