--- a/Restaurants/note.html
+++ b/Restaurants/note.html
@@ -18,14 +18,11 @@
                 <div class="nav__logo"><img src="../assets/Images/logo/ohmyfood@2x.svg" alt="logo ohmyfood"></div>
                 <div class="nav__espace"></div>
             </div>
-            <div class="nav__loc">
-                <i class="fa-solid fa-location-dot"></i>
-                <p class="nav__texte">
-                    Paris, Belleville
-                </p>
-            </div>
         </nav>
-        <main>
+        <div class="restaurant__pics">
+            <img src="../assets/Images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt=" image plats de La palette du goût">
+        </div>
+        <main class="section__pics">
             <!-- entrées -->
             <section>
                 <div class="carte__title">
@@ -36,26 +33,34 @@
                     <p class="position">ENTREES</p>
                     <div>
                         <div class="card">
-                            <h3>Fricassée d'escargots</h3>
+                            <h3>Ravioles de foie gras</h3>
                             <div class="card__contenu">
-                                <p>Au piments d'Espelette</p>
-                                <p>25$</p>
+                                <p>Accompagnées de leur crème à la truffe</p>
+                                <p class="card__prix">25€</p>
                             </div>
                         </div>
 
                         <div class="card">
-                            <h3>Fricassée d'escargots</h3>
+                            <h3>Caviar osciètre</h3>
                             <div class="card__contenu">
-                                <p>Au piments d'Espelette</p>
-                                <p>25$</p>
+                                <p>Sur blini à la farine de blé noir</p>
+                                <p class="card__prix">35€</p>
                             </div>
                         </div>
 
                         <div class="card">
-                            <h3>Fricassée d'escargots</h3>
+                            <h3>Homard et espuma de potiron</h3>
                             <div class="card__contenu">
-                                <p>Au piments d'Espelette</p>
-                                <p>25$</p>
+                                <p>Marinés aux zestes d'orange</p>
+                                <p class="card__prix">20€</p>
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <h3>Foie gras de canard cuit entier</h3>
+                            <div class="card__contenu">
+                                <p>Confiture de figue et pain toasté</p>
+                                <p class="card__prix">35€</p>
                             </div>
                         </div>
 
@@ -66,26 +71,26 @@
                     <p class="position">PLATS</p>
                     <div>
                         <div class="card">
-                            <h3>Fricassée d'escargots</h3>
+                            <h3>Noix de coquilles Saint-Jacques</h3>
                             <div class="card__contenu">
-                                <p>Au piments d'Espelette</p>
-                                <p>25$</p>
+                                <p>Sur lit de purée de céleri-rave</p>
+                                <p class="card__prix">40€</p>
                             </div>
                         </div>
 
                         <div class="card">
-                            <h3>Fricassée d'escargots</h3>
+                            <h3>Langoustine poêlée</h3>
                             <div class="card__contenu">
-                                <p>Au piments d'Espelette</p>
-                                <p>25$</p>
+                                <p>Purée de patate douce</p>
+                                <p class="card__prix">35€</p>
                             </div>
                         </div>
 
                         <div class="card">
-                            <h3>Fricassée d'escargots</h3>
+                            <h3>Mijoté de queue de bœuf</h3>
                             <div class="card__contenu">
-                                <p>Au piments d'Espelette</p>
-                                <p>25$</p>
+                                <p>Et riz sauvage aux zestes de citron</p>
+                                <p class="card__prix">44€</p>
                             </div>
                         </div>
 
@@ -96,37 +101,37 @@
                     <p class="position">DESSERTS</p>
                     <div>
                         <div class="card">
-                            <h3>Fricassée d'escargots</h3>
+                            <h3>Macaron noisette et chocolat</h3>
                             <div class="card__contenu">
-                                <p>Au piments d'Espelette</p>
-                                <p>25$</p>
+                                <p>Glace au caramel brun et sel de Guérande</p>
+                                <p class="card__prix">18€</p>
                             </div>
                         </div>
 
                         <div class="card">
-                            <h3>Fricassée d'escargots</h3>
+                            <h3>Baba au rhum revisité</h3>
                             <div class="card__contenu">
-                                <p>Au piments d'Espelette</p>
-                                <p>25$</p>
+                                <p>Avec son coulis de citron</p>
+                                <p class="card__prix">22€</p>
                             </div>
                         </div>
 
                         <div class="card">
-                            <h3>Fricassée d'escargots</h3>
+                            <h3>Tarte au citron meringuée</h3>
                             <div class="card__contenu">
-                                <p>Au piments d'Espelette</p>
-                                <p>25$</p>
+                                <p>Déstructurée</p>
+                                <p class="card__prix">23€</p>
                             </div>
                         </div>
 
                     </div>
                 </article>
-                <div class="button__position">
-                <a href="#" class="buttons">Commander</a>
-                </div>
             </section>
             
         </main>
+        <div class="button__position">
+            <a href="#" class="buttons">Commander</a>
+        </div>
         <footer>
             <div class="footer__main">
                 <h3>ohmyfood</h3>
