feat: affichage desktop  des pages restaurant

--- a/Restaurants/delice.html
+++ b/Restaurants/delice.html
@@ -24,7 +24,7 @@
         </div>
         <main class="section__pics">
             <!-- entrées -->
-            <section>
+            <section class="restaurant__main">
                 <div class="carte__title">
                     <div><h2>Le délice des sens</h2></div>
                     <div><i class="fa-regular fa-heart"></i></div>
@@ -118,12 +118,15 @@
 
                     </div>
                 </article>
+
+                <div class="button__position">
+                    <a href="#" class="buttons">Commander</a>
+                </div>
+
             </section>
             
         </main>
-        <div class="button__position">
-            <a href="#" class="buttons">Commander</a>
-        </div>
+        
         <footer>
             <div class="footer__main">
                 <h3>ohmyfood</h3>
