--- a/Restaurants/palette.html
+++ b/Restaurants/palette.html
@@ -26,7 +26,7 @@
         
         <main class="section__pics">
             <!-- entrées -->
-            <section>
+            <section class="restaurant__main">
                 <div class="carte__title">
                     <div><h2>La Palette du Goût</h2></div>
                     <div><i class="fa-regular fa-heart"></i></div>
@@ -120,12 +120,13 @@
 
                     </div>
                 </article>
+
+                <div class="button__position">
+                    <a href="#" class="buttons">Commander</a>
+                </div>
+                
             </section>
         </main>
-
-        <div class="button__position">
-            <a href="#" class="buttons">Commander</a>
-        </div>
 
         <footer>
             <div class="footer__main">
