--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
             <div class="header__content">
                 <h1 class="header__title">Réservez le menu qui vous convient</h1>
                 <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
-                <a href="#" class="header__button">Explorer nos restaurants</a>
+                <a href="#note" class="header__button">Explorer nos restaurants</a>
             </div>
         </header>
         <main>
             <section class="fonctionnement">
                 <h2>Fonctionnement</h2>
-                <div>
+                <div class="fonction__desktop">
                     <p class="fonctionnement__list"><i class="fa-solid fa-mobile-screen-button"></i>Choisissez un restaurant</p>
                     <p class="fonctionnement__list"><i class="fa-solid fa-list"></i>Composez votre menu</p>
                     <p class="fonctionnement__list"><i class="fa-solid fa-store"></i>Dégustez au restaurant</p>
@@ -62,7 +62,7 @@
                             </a>
                         </div>
 
-                        <div class="restaurant__cards">
+                        <div class="restaurant__cards" id="note">
                             <a href="Restaurants/note.html">
                                 <article>
                                     <img src="assets/Images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
