--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </section>
             <div class="restaurant">
                 <section class="restaurant__main">
-                    <div>
+                    <div class="restaurant__title">
                         <h2>Restaurants</h2>
                     </div>
                     <div class="restaurant__list">
