feat: modification des pages restaurant

--- a/Restaurants/note.html
+++ b/Restaurants/note.html
@@ -24,14 +24,14 @@
         </div>
         <main class="section__pics">
             <!-- entrées -->
-            <section class="restaurant__main">
+            <section class="cards__main">
                 <div class="carte__title">
                     <div><h2>La note enchantée</h2></div>
                     <div><i class="fa-regular fa-heart"></i></div>
                 </div>
                 <article class="carte">
                     <p class="position">ENTREES</p>
-                    <div>
+                    <div class="card__menu">
                         <div class="card">
                             <h3>Ravioles de foie gras</h3>
                             <div class="card__contenu">
