--- a/Restaurants/delice.html
+++ b/Restaurants/delice.html
@@ -24,13 +24,17 @@
         </div>
         <main class="section__pics">
             <!-- entrées -->
-            <section class="restaurant__main">
+            <section class="cards__main">
                 <div class="carte__title">
                     <div><h2>Le délice des sens</h2></div>
                     <div><i class="fa-regular fa-heart"></i></div>
                 </div>
                 <article class="carte">
-                    <p class="position">ENTREES</p>
+
+                    <div class="carte__menu">
+                        <p class="position">ENTREES</p>
+                    </div>
+
                     <div>
                         <div class="card">
                             <h3>Tartare de thon</h3>
@@ -60,7 +64,9 @@
                 </article>
                 <!-- plats -->
                 <article class="carte">
-                    <p class="position">PLATS</p>
+                    <div class="carte__menu">
+                        <p class="position">PLATS</p>
+                    </div>
                     <div>
                         <div class="card">
                             <h3>Poulet rôti aux herbes de Provence</h3>
@@ -90,7 +96,9 @@
                 </article>
                 <!-- desserts -->
                 <article class="carte">
-                    <p class="position">DESSERTS</p>
+                    <div class="carte__menu">
+                        <p class="position">DESSERTS</p>
+                    </div>
                     <div>
                         <div class="card">
                             <h3>Farandole de desserts</h3>
