--- a/Restaurants/note.html
+++ b/Restaurants/note.html
@@ -30,8 +30,12 @@
                     <div><i class="fa-regular fa-heart"></i></div>
                 </div>
                 <article class="carte">
-                    <p class="position">ENTREES</p>
-                    <div class="card__menu">
+
+                    <div class="carte__menu">
+                        <p class="position">ENTREES</p>
+                    </div>
+
+                    <div>
                         <div class="card">
                             <h3>Ravioles de foie gras</h3>
                             <div class="card__contenu">
@@ -68,7 +72,9 @@
                 </article>
                 <!-- plats -->
                 <article class="carte">
-                    <p class="position">PLATS</p>
+                    <div class="carte__menu">
+                        <p class="position">PLATS</p>
+                    </div>
                     <div>
                         <div class="card">
                             <h3>Noix de coquilles Saint-Jacques</h3>
@@ -98,7 +104,9 @@
                 </article>
                 <!-- desserts -->
                 <article class="carte">
-                    <p class="position">DESSERTS</p>
+                    <div class="carte__menu">
+                        <p class="position">DESSERTS</p>
+                    </div>
                     <div>
                         <div class="card">
                             <h3>Macaron noisette et chocolat</h3>
