--- a/Restaurants/palette.html
+++ b/Restaurants/palette.html
@@ -26,13 +26,17 @@
         
         <main class="section__pics">
             <!-- entrées -->
-            <section class="restaurant__main">
+            <section class="cards__main">
                 <div class="carte__title">
                     <div><h2>La Palette du Goût</h2></div>
                     <div><i class="fa-regular fa-heart"></i></div>
                 </div>
                 <article class="carte">
-                    <p class="position">ENTREES</p>
+
+                    <div class="carte__menu">
+                        <p class="position">ENTREES</p>
+                    </div>
+                    
                     <div>
                         <div class="card">
                             <h3>Fricassée d'escargots</h3>
@@ -62,7 +66,11 @@
                 </article>
                 <!-- plats -->
                 <article class="carte">
-                    <p class="position">PLATS</p>
+
+                    <div class="carte__menu">
+                        <p class="position">PLATS</p>
+                    </div>
+
                     <div>
                         <div class="card">
                             <h3>Filet de bœuf aux herbes</h3>
@@ -92,7 +100,11 @@
                 </article>
                 <!-- desserts -->
                 <article class="carte">
-                    <p class="position">DESSERTS</p>
+
+                    <div class="carte__menu">
+                        <p class="position">DESSERTS</p>
+                    </div>
+
                     <div>
                         <div class="card">
                             <h3>Paris-Brest</h3>
