feat: finalisation des cards fonctionnement

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
             <section class="fonctionnement">
                 <h2>Fonctionnement</h2>
                 <div class="fonction__desktop">
-                    <p class="fonctionnement__list"><i class="fa-solid fa-mobile-screen-button"></i>Choisissez un restaurant</p>
-                    <p class="fonctionnement__list"><i class="fa-solid fa-list"></i>Composez votre menu</p>
-                    <p class="fonctionnement__list"><i class="fa-solid fa-store"></i>Dégustez au restaurant</p>
+                    <p class="fonctionnement__list"><span class="fonctionnement__number">1</span><i class="fa-solid fa-mobile-screen-button"></i>Choisissez un restaurant</p>
+                    <p class="fonctionnement__list"><span class="fonctionnement__number">2</span><i class="fa-solid fa-list"></i>Composez votre menu</p>
+                    <p class="fonctionnement__list"><span class="fonctionnement__number">3</span><i class="fa-solid fa-store"></i>Dégustez au restaurant</p>
                 </div>
             </section>
             <div class="restaurant">
