--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="header__content">
                 <h1 class="header__title">Réservez le menu qui vous convient</h1>
                 <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
-                <a href="#note" class="header__button">Explorer nos restaurants</a>
+                <a href="#note" class="buttons">Explorer nos restaurants</a>
             </div>
         </header>
         <main>
@@ -46,9 +46,8 @@
                     </div>
                     <div class="restaurant__list">
                         <div class="restaurant__cards">
-                            <a href="Restaurants/palette.html">
                                 <article>
-                                    <img src="assets/Images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
+                                    <a href="restaurants/palette.html"><img src="assets/Images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût"></a>
                                     <div class="restaurant__nom">
                                         <div class="restaurant__content">
                                             <h3>La palette du goût</h3>
@@ -59,13 +58,11 @@
                                         </div>
                                     </div>
                                 </article>
-                            </a>
                         </div>
 
-                        <div class="restaurant__cards" id="note">
-                            <a href="Restaurants/note.html">
+                        <div class="restaurant__cards petit" id="note">
                                 <article>
-                                    <img src="assets/Images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
+                                    <a href="Restaurants/note.html"><img src="assets/Images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée"></a>
                                     <div class="restaurant__nom">
                                         <div class="restaurant__content">
                                             <h3>La note enchantée</h3>
@@ -76,13 +73,11 @@
                                         </div>
                                     </div>
                                 </article>
-                            </a>
                         </div>
 
-                        <div class="restaurant__cards">
-                            <a href="Restaurants/francaise.html">
+                        <div class="restaurant__cards petit">
                                 <article>
-                                    <img src="assets/Images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française">
+                                    <a href="Restaurants/francaise.html"><img src="assets/Images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française"></a>
                                     <div class="restaurant__nom">
                                         <div class="restaurant__content">
                                             <h3>A la française</h3>
@@ -93,13 +88,11 @@
                                         </div>
                                     </div>
                                 </article>
-                            </a>
                         </div>
                         
-                        <div class="restaurant__cards">
-                            <a href="Restaurants/delice.html">
+                        <div class="restaurant__cards petit">
                                 <article>
-                                    <img src="assets/Images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
+                                    <a href="Restaurants/delice.html"><img src="assets/Images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens"></a>
                                     <div class="restaurant__nom">
                                         <div class="restaurant__content">
                                             <h3>Le délice des sens</h3>
@@ -110,7 +103,6 @@
                                         </div>
                                     </div>
                                 </article>
-                            </a>
                         </div>
                     </div>
                 </section>
