style: ajout du volet droit au survol des cartes (pages restaurants)

--- a/Restaurants/palette.html
+++ b/Restaurants/palette.html
@@ -44,6 +44,7 @@
                                 <p>Au piments d'Espelette</p>
                                 <p class="card__prix">25€</p>
                             </div>
+                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
                         <div class="card">
@@ -52,6 +53,7 @@
                                 <p>Et ses copeaux de truffe noire</p>
                                 <p class="card__prix">35€</p>
                             </div>
+                            <div class="volet__hover"><<i class="fa-regular fa-circle-check"></i>/div>
                         </div>
 
                         <div class="card">
@@ -59,6 +61,7 @@
                             <div class="card__contenu">
                                 <p>Assaisonné à la truffe sur lit de caviar</p>
                                 <p class="card__prix">20€</p>
+                                <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                             </div>
                         </div>
 
@@ -78,6 +81,7 @@
                                 <p>Accompagné de sa ribambelle de légumes</p>
                                 <p class="card__prix">40€</p>
                             </div>
+                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
                         <div class="card">
@@ -86,6 +90,7 @@
                                 <p>À la truffe noire sur sa purée de panais</p>
                                 <p class="card__prix">35€</p>
                             </div>
+                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
                         <div class="card">
@@ -94,6 +99,7 @@
                                 <p>Aux agrumes</p>
                                 <p class="card__prix">44€</p>
                             </div>
+                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
                     </div>
@@ -112,6 +118,7 @@
                                 <p>Revisité</p>
                                 <p class="card__prix">18€</p>
                             </div>
+                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
                         <div class="card">
@@ -120,6 +127,7 @@
                                 <p>Et glace à la vanille de Madagascar</p>
                                 <p class="card__prix">22€</p>
                             </div>
+                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
                         <div class="card">
@@ -128,6 +136,7 @@
                                 <p>Au piment d'Espelette et à la truffe noire</p>
                                 <p class="card__prix">23€</p>
                             </div>
+                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
                     </div>
