--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
         </header>
         <main>
             <section class="fonctionnement">
-                <h2>Fonctionnement</h2>
+
+                    <h2 class="fonctionnement__title">Fonctionnement</h2>
+
                 <div class="fonction__desktop">
                     <p class="fonctionnement__list"><span class="fonctionnement__number">1</span><i class="fa-solid fa-mobile-screen-button"></i>Choisissez un restaurant</p>
                     <p class="fonctionnement__list"><span class="fonctionnement__number">2</span><i class="fa-solid fa-list"></i>Composez votre menu</p>
