--- a/Restaurants/delice.html
+++ b/Restaurants/delice.html
@@ -42,6 +42,7 @@
                                 <p>Assaisonné au yuzu</p>
                                 <p class="card__prix">25€</p>
                             </div>
+                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
                         <div class="card">
@@ -50,6 +51,7 @@
                                 <p>Et sa farandole de petits légumes</p>
                                 <p class="card__prix">35€</p>
                             </div>
+                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
                         <div class="card">
@@ -58,6 +60,7 @@
                                 <p>Aux truffes</p>
                                 <p class="card__prix">20€</p>
                             </div>
+                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
                     </div>
@@ -74,6 +77,7 @@
                                 <p>Et sa crème de truffe</p>
                                 <p class="card__prix">40€</p>
                             </div>
+                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
                         <div class="card">
@@ -82,6 +86,7 @@
                                 <p>Et ses légumes de saison</p>
                                 <p class="card__prix">35€</p>
                             </div>
+                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
                         <div class="card">
@@ -90,6 +95,7 @@
                                 <p>Et sa purée de panais</p>
                                 <p class="card__prix">44€</p>
                             </div>
+                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
                     </div>
@@ -106,6 +112,7 @@
                                 <p>Du chef</p>
                                 <p class="card__prix">18€</p>
                             </div>
+                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
                         <div class="card">
@@ -114,6 +121,7 @@
                                 <p>Revisitée</p>
                                 <p class="card__prix">22€</p>
                             </div>
+                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
                         <div class="card">
@@ -122,6 +130,7 @@
                                 <p>À la noisette</p>
                                 <p class="card__prix">23€</p>
                             </div>
+                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
                     </div>
