--- a/Restaurants/francaise.html
+++ b/Restaurants/francaise.html
@@ -42,6 +42,7 @@
                                 <p>Aux zestes d'orange</p>
                                 <p class="card__prix">25€</p>
                             </div>
+                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
                         <div class="card">
@@ -50,6 +51,7 @@
                                 <p>Carotte, panais, topinambour</p>
                                 <p class="card__prix">35€</p>
                             </div>
+                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
                         <div class="card">
@@ -58,6 +60,7 @@
                                 <p>Revisitée</p>
                                 <p class="card__prix">20€</p>
                             </div>
+                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
                     </div>
@@ -74,6 +77,7 @@
                                 <p>Accompagnées d'une purée de panais</p>
                                 <p class="card__prix">40€</p>
                             </div>
+                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
                         <div class="card">
@@ -82,6 +86,7 @@
                                 <p>Et parmentier de pommes de terre</p>
                                 <p class="card__prix">35€</p>
                             </div>
+                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
                         <div class="card">
@@ -90,6 +95,7 @@
                                 <p>Sur son lit de gnocchis aux légumes</p>
                                 <p class="card__prix">44€</p>
                             </div>
+                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
                     </div>
@@ -106,6 +112,7 @@
                                 <p>Et purée de noisettes</p>
                                 <p class="card__prix">18€</p>
                             </div>
+                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
                         <div class="card">
@@ -114,6 +121,7 @@
                                 <p>Revisité</p>
                                 <p class="card__prix">22€</p>
                             </div>
+                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
                         <div class="card">
@@ -122,6 +130,7 @@
                                 <p>Myrtilles et pâte d’amande</p>
                                 <p class="card__prix">23€</p>
                             </div>
+                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
                     </div>
