--- a/Restaurants/note.html
+++ b/Restaurants/note.html
@@ -42,6 +42,7 @@
                                 <p>Accompagnées de leur crème à la truffe</p>
                                 <p class="card__prix">25€</p>
                             </div>
+                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
                         <div class="card">
@@ -50,6 +51,7 @@
                                 <p>Sur blini à la farine de blé noir</p>
                                 <p class="card__prix">35€</p>
                             </div>
+                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
                         <div class="card">
@@ -58,6 +60,7 @@
                                 <p>Marinés aux zestes d'orange</p>
                                 <p class="card__prix">20€</p>
                             </div>
+                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
                         <div class="card">
@@ -66,6 +69,7 @@
                                 <p>Confiture de figue et pain toasté</p>
                                 <p class="card__prix">35€</p>
                             </div>
+                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
                     </div>
@@ -82,6 +86,7 @@
                                 <p>Sur lit de purée de céleri-rave</p>
                                 <p class="card__prix">40€</p>
                             </div>
+                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
                         <div class="card">
@@ -90,6 +95,7 @@
                                 <p>Purée de patate douce</p>
                                 <p class="card__prix">35€</p>
                             </div>
+                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
                         <div class="card">
@@ -98,6 +104,7 @@
                                 <p>Et riz sauvage aux zestes de citron</p>
                                 <p class="card__prix">44€</p>
                             </div>
+                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
                     </div>
@@ -114,6 +121,7 @@
                                 <p>Glace au caramel brun et sel de Guérande</p>
                                 <p class="card__prix">18€</p>
                             </div>
+                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
                         <div class="card">
@@ -122,6 +130,7 @@
                                 <p>Avec son coulis de citron</p>
                                 <p class="card__prix">22€</p>
                             </div>
+                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
                         <div class="card">
@@ -130,6 +139,7 @@
                                 <p>Déstructurée</p>
                                 <p class="card__prix">23€</p>
                             </div>
+                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
                     </div>
