style: ajout de l'animation du coeur sur la page d'accueil

--- a/Restaurants/francaise.html
+++ b/Restaurants/francaise.html
@@ -27,7 +27,10 @@
             <section class="cards__main">
                 <div class="carte__title">
                     <div><h2>A la française</h2></div>
-                    <div><i class="fa-regular fa-heart"></i></div>
+                    <div class="restaurant__like">
+                        <i class="fa-regular fa-heart coeur"></i>
+                        <i class="fa-solid fa-heart coeur__hover "></i>
+                    </div>
                 </div>
                 <article class="carte">
 
