--- a/Restaurants/palette.html
+++ b/Restaurants/palette.html
@@ -29,7 +29,10 @@
             <section class="cards__main">
                 <div class="carte__title">
                     <div><h2>La Palette du Goût</h2></div>
-                    <div><i class="fa-regular fa-heart"></i></div>
+                    <div class="restaurant__like">
+                        <i class="fa-regular fa-heart coeur"></i>
+                        <i class="fa-solid fa-heart coeur__hover "></i>
+                    </div>
                 </div>
                 <article class="carte">
 
@@ -53,7 +56,7 @@
                                 <p>Et ses copeaux de truffe noire</p>
                                 <p class="card__prix">35€</p>
                             </div>
-                            <div class="volet__hover"><<i class="fa-regular fa-circle-check"></i>/div>
+                            <div class="volet__hover"><i class="fa-regular fa-circle-check"></i></div>
                         </div>
 
                         <div class="card">
