--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
                                             <p>Ménilmontant</p>
                                         </div>
                                         <div class="restaurant__like">
-                                            <i class="fa-regular fa-heart"></i>
+                                            <i class="fa-regular fa-heart coeur like"></i>
+                                            <i class="fa-solid fa-heart coeur__hover like"></i>
                                         </div>
                                     </div>
                                 </article>
@@ -71,7 +72,8 @@
                                             <p>Charonne</p>
                                         </div>
                                         <div class="restaurant__like">
-                                            <i class="fa-regular fa-heart"></i>
+                                            <i class="fa-regular fa-heart coeur like"></i>
+                                            <i class="fa-solid fa-heart coeur__hover like"></i>
                                         </div>
                                     </div>
                                 </article>
@@ -86,7 +88,8 @@
                                             <p>Cité Rouge</p>
                                         </div>
                                         <div class="restaurant__like">
-                                            <i class="fa-regular fa-heart"></i>
+                                            <i class="fa-regular fa-heart coeur like"></i>
+                                            <i class="fa-solid fa-heart coeur__hover like"></i>
                                         </div>
                                     </div>
                                 </article>
@@ -101,7 +104,8 @@
                                             <p>Folie-Méricourt</p>
                                         </div>
                                         <div class="restaurant__like">
-                                            <i class="fa-regular fa-heart"></i>
+                                            <i class="fa-regular fa-heart coeur like"></i>
+                                            <i class="fa-solid fa-heart coeur__hover like"></i>
                                         </div>
                                     </div>
                                 </article>
