style: ajout de l'animation du coeur sur les pages restaurants

--- a/Restaurants/palette.html
+++ b/Restaurants/palette.html
@@ -31,7 +31,7 @@
                     <div><h2>La Palette du Goût</h2></div>
                     <div class="restaurant__like">
                         <i class="fa-regular fa-heart coeur"></i>
-                        <i class="fa-solid fa-heart coeur__hover "></i>
+                        <i class="fa-solid fa-heart coeur__hover coeur__list"></i>
                     </div>
                 </div>
                 <article class="carte">
