--- a/Restaurants/note.html
+++ b/Restaurants/note.html
@@ -29,7 +29,7 @@
                     <div><h2>La note enchantée</h2></div>
                     <div class="restaurant__like">
                         <i class="fa-regular fa-heart coeur"></i>
-                        <i class="fa-solid fa-heart coeur__hover "></i>
+                        <i class="fa-solid fa-heart coeur__hover coeur__list"></i>
                     </div>
                 </div>
                 <article class="carte">
